--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -25,4 +27,8 @@ li {
 
 li:hover .text-1{
   display: inline-block;
+}
+
+.interFont{
+  font-family: 'Inter', sans-serif;
 }
